refactor parabolic optimization algorithm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,13 +31,13 @@ target_link_libraries(app-polyline
     PUBLIC
     evaluator)
 
-# add_executable(app-parabola)
-# target_sources(app-parabola
-#     PRIVATE
-#     parabola.cpp)
-# target_link_libraries(app-parabola
-#     PUBLIC
-#     evaluator)
+add_executable(app-parabola)
+target_sources(app-parabola
+    PRIVATE
+    parabola.cpp)
+target_link_libraries(app-parabola
+    PUBLIC
+    evaluator)
 
 add_executable(app-golden)
 target_sources(app-golden
