add Newton optimization algorithm (1D)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,14 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_subdirectory(eval)
 
+add_executable(app-newton1d)
+target_sources(app-newton1d
+    PRIVATE
+    newton1d.cpp)
+target_link_libraries(app-newton1d
+    PUBLIC
+    evaluator)
+
 add_executable(app-runge-kutta)
 target_sources(app-runge-kutta
     PRIVATE
