implement elegant and deterministic cell marking algorithm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,14 +52,6 @@ target_link_libraries(app-newton1d
     PUBLIC
     evaluator)
 
-# add_executable(app-shooting)
-# target_sources(app-shooting
-#     PRIVATE
-#     shooting.cpp)
-# target_link_libraries(app-shooting
-#     PUBLIC
-#     evaluator)
-
 add_executable(app-runge-kutta)
 target_sources(app-runge-kutta
     PRIVATE
@@ -82,7 +74,8 @@ target_sources(app-polyline
     polyline.cpp)
 target_link_libraries(app-polyline
     PUBLIC
-    evaluator)
+    evaluator
+    eigen)
 
 add_executable(app-parabola)
 target_sources(app-parabola
